--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
   },
   "homepage": "https://github.com/chris-paul-ejercito/codesmith-solo-project#readme",
   "dependencies": {
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
+    "postgres": "^1.0.2",
     "react": "^17.0.2",
-    "webpack": "^5.28.0"
+    "webpack": "^5.28.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "devDependencies": {
     "eslint": "^7.23.0",
